# biu

./: .flake8  .gitignore  README.md  pyproject.toml
src/biu/: __init__.py  __main__.py  main.py
src/biu/pipes/: __init__.py  basic.py  parallel.py  pv.py
src/biu/streams/: __init__.py  exec.py  ls.py
