[project]
name = "biu"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mivik", email = "mivik@qq.com" }
]
dependencies = [
    "pydantic>=2.6.4",
    "rich>=13.7.1",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/biu"]
